package com.vetSystem.vet_system.model;

public enum EstadoTurno {
    PENDIENTE,
    EN_CURSO,
    FINALIZADO,
    CANCELADO
}
